# funcgen-scpi

./: .gitmodules  CMakeLists.txt  README.md  error.cpp  main.cpp  main.h  utils.cpp  utils.h
